# LifePlanner

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SKELETON.md
.github/workflows/: ci.yml
crates/lp-cli/: Cargo.toml
crates/lp-cli/src/: main.rs
crates/lp-core/: Cargo.toml
crates/lp-core/src/: lib.rs
crates/lp-core/src/ai/: mod.rs  ollama.rs  prompts.rs
crates/lp-core/src/analyzer/: conflicts.rs  mod.rs  patterns.rs  priorities.rs  time_slots.rs
crates/lp-core/src/calendar/: accounts.rs  caldav.rs  ics.rs  mod.rs
crates/lp-core/src/db/: mod.rs  queries.rs
crates/lp-core/src/db/migrations/: 0001_events.sql  0002_tasks.sql  0003_projects.sql
crates/lp-core/src/extractor/: date_parser.rs  email.rs  mod.rs  text.rs
crates/lp-core/src/models/: document.rs  event.rs  mod.rs  project.rs  settings.rs  task.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Calendar/: CalendarView.tsx
frontend/src/components/Capture/: CaptureView.tsx
frontend/src/components/Projects/: ProjectsView.tsx
frontend/src/components/Search/: SearchView.tsx
frontend/src/components/Settings/: SettingsView.tsx
frontend/src/components/Tasks/: TasksView.tsx
frontend/src/components/Today/: TodayView.tsx
frontend/src/lib/: tauri.ts
frontend/src/stores/: plannerStore.ts  settingsStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  analysis.rs  calendar.rs  events.rs  extract.rs  mod.rs  projects.rs  settings.rs  tasks.rs
