[workspace]
members = ["crates/lp-core", "crates/lp-cli", "src-tauri"]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1",   features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1",   features = ["v4", "serde"] }
sqlx        = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "migrate"] }
thiserror   = "1"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = "0.3"
regex       = "1"
once_cell   = "1"
rayon       = "1"
keyring     = "3"
quick-xml   = { version = "0.36", features = ["serialize"] }
