[package]
name    = "lifeplanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "lifeplanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lp-core     = { path = "../crates/lp-core" }
tauri       = { version = "2", features = [] }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
