[package]
name    = "lp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
sqlx        = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
regex       = { workspace = true }
once_cell   = { workspace = true }
rayon       = { workspace = true }
keyring     = { workspace = true }
quick-xml   = { workspace = true }
ical        = "0.10"
base64      = "0.22"
